--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-dom": "^16.4.1",
     "react-rangeslider": "^2.2.0",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.1.3",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^3.3.3"
@@ -22,5 +22,11 @@
   },
   "devDependencies": {
     "redux-devtools-extension": "^2.13.5"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
